Backport everything to Java 11 (breaking changes)