@@ -7,7 +7,7 @@
     <parent>
         <groupId>eu.kafkaesque</groupId>
         <artifactId>kafkaesque-parent</artifactId>
-        <version>0.1.2-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>kafkaesque-standalone</artifactId>
@@ -113,7 +113,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
+                    <argLine>${nativeAccessArg}</argLine>
                     <systemPropertyVariables>
                         <project.root>${maven.multiModuleProjectDirectory}</project.root>
                         <standalone.jar>${project.build.directory}/${project.build.finalName}.jar</standalone.jar>
